--- a/patient/templates/patient/history/history.html
+++ b/patient/templates/patient/history/history.html
@@ -7,26 +7,21 @@
 {% block content %}
 
 <table class="table">
+    <h2>{{ patient }}</h2>
     <thead>
     <tr>
-        <th>Пациент</th>
-        <th>Номер палаты</th>
-        <th>дата перемещения</th>
+        <th>Дата перемещения</th>
+        <th>Откуда</th>
+        <th>Куда</th>
     </tr>
     </thead>
     <tbody>
-        {% for item_patient in patient %}
-            {% for item_history in history %}
-                {% if item_history.id == item_patient.pk %}
-                <tr>
-                    <td>{{ item_patient.surname }} {{ item_patient.name }} {{ item_patient.second_name }}</td>
-                    <td>{{ item_history.ward }}</td>
-                    <td>{{ item_history.history_date }}</td>
-                </tr>
-                {% endif %}
-            {% endfor %}
-            
-            
+        {% for item_patient in patient_history %}
+            <tr>
+                <td>{{ item_patient.ward_movement_date }}</td>
+                <td>{{ item_patient.prev_ward_number }}</td>
+                <td>{{ item_patient.current_ward_number }}</td>
+            </tr>
         {% endfor %}
     </tbody>
 </table>
