--- a/patient/templates/patient/department/departments_list.html
+++ b/patient/templates/patient/department/departments_list.html
@@ -8,19 +8,20 @@
 
 {% load patient_tags %}
 {% get_departments as departments %}
-
-<table class="table" id="table">
-    <thead>
-    <tr>
-        <th>Отделения</th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for item in departments %}
-    <tr>
-        <td><a href="{{ item.get_absolute_url }}">{{ item.name }}</a></td>
-    </tr>
-    {% endfor %}
-    </tbody>
-</table>
+<div class="container">
+    <table class="table" id="table">
+        <thead>
+        <tr>
+            <th>Отделения</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for item in departments %}
+        <tr>
+            <td><a href="{{ item.get_absolute_url }}">{{ item.name }}</a></td>
+        </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% endblock %}
