--- a/patient/templates/patient/home/home.html
+++ b/patient/templates/patient/home/home.html
@@ -5,10 +5,9 @@
 {% endblock %}
 
 {% block content%}
-<div class="container m-3"></div>
-<h1 class="m-3">Страница находится в разработке</h1>
-<h3 class="m-3">Скоро здесь что-нибудь появится</h3>
-<img src="{% static 'image/test.png' %}" alt="Но это не точно" class="m-3" width="350px">
+<div class="container m-3">
+    <h1 class="m-3">Страница находится в разработке</h1>
+    <h3 class="m-3">Скоро здесь что-нибудь появится</h3>
+    <img src="{% static 'image/test.png' %}" alt="Но это не точно" class="m-3" width="350px">
+</div>
 {% endblock %}
-
-
