--- a/patient/templates/patient/patient/patient_detail.html
+++ b/patient/templates/patient/patient/patient_detail.html
@@ -5,12 +5,14 @@
 {% endblock %}
 
 {% block content %}
-    <h3 class=m-3>Пациент {{ object }}</h3>
     <div class="container" style="width: 60%;">
-        <form action="{% url 'patient_edit' object.pk %}" method="get">
+        <div class="card-header mt-3">
+            <h3>{{ object }}</h3>
+        </div>
+        <form action="" method="get">
             {% csrf_token %}
             {{ object.non_field_errors }}
-            <div class="form-row">
+            <div class="form-row mt-3">
                 <div class="form-group col-md">
                     <label for="id_surname">Фамилия:</label>
                     <input type="text" name="surname" class="form-control" maxlength="100" id="id_surname"
@@ -146,11 +148,10 @@
                 </div>
             </div>
             <div class="text-right m-3">
-                <input type="submit" class="btn btn-dark" value="Редактирование">
+                <a href="{% url 'patient_edit' object.pk %}" class="btn btn-secondary">Редактировать</a>
             </div>
         </form>
     </div>
-    <div>
-    </div>
-
+<div>
+</div>
 {% endblock %}
