--- a/templates/include/__nav.html
+++ b/templates/include/__nav.html
@@ -1,7 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark" style="background-color: #adc9ea">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #adc9ea">
     <a class="navbar-brand" href="{% url 'home' %}">Клиническая больница</a>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+    <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+            {% if request.user.is_authenticated %}
             <li class="nav-item active">
                 <a class="nav-link" href="{% url 'patients' %}">Пациенты</a>
             </li>
@@ -17,6 +18,17 @@
             <li class="nav-item active">
                 <a class="nav-link" href="{% url 'add_patient' %}">Новый пациент</a>
             </li>
+            {% endif %}
         </ul>
+        {% if request.user.is_authenticated %}
+            <span class="navbar-text">
+                <span>Добро пожаловать, {{ user }} | </span>
+                <span><a href="{% url 'logout' %}">Выйти</a></span>
+            </span>
+        {% else %}
+            <span class="navbar-text">
+                <span><a href="{% url 'login' %}">Войти</a></span>
+            </span>
+        {% endif %}
     </div>
 </nav>
