--- a/patient/templates/patient/patient/patient_detail.html
+++ b/patient/templates/patient/patient/patient_detail.html
@@ -148,6 +148,7 @@
                 </div>
             </div>
             <div class="text-right m-3">
+                <a href="{% url 'history' object.pk %}" class="btn btn-secondary">Просмотреть перемещения</a>
                 <a href="{% url 'patient_edit' object.pk %}" class="btn btn-secondary">Редактировать</a>
             </div>
         </form>
