Added logo to home page

--- a/patient/templates/patient/home/home.html
+++ b/patient/templates/patient/home/home.html
@@ -5,9 +5,7 @@
 {% endblock %}
 
 {% block content%}
-<div class="container m-3">
-    <h1 class="m-3">Страница находится в разработке</h1>
-    <h3 class="m-3">Скоро здесь что-нибудь появится</h3>
-    <img src="{% static 'image/test.png' %}" alt="Но это не точно" class="m-3" width="350px">
+<div class="container" style="background: url({% static 'minzdrav.png' %}) no-repeat; background-position: center; height: 80%; width: 100%;">
+    
 </div>
 {% endblock %}
