--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,3 +40,8 @@ a:active {
     text-align: right;
     background-color: #cccccc;
 }
+
+body {
+    background: #dae4e2;
+    background-position: center;
+}
