--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>{% block title %}Клиническая больница{% endblock %}</title>
     </head>
-    <body class="bg-light">
+    <body>
 
             {% include 'include/__nav.html'%}
 
